syntax = "proto3";
package zeta.escrow;

import "gogoproto/gogo.proto";
import "escrow/params.proto";
import "escrow/crow.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "zeta/x/escrow/types";

// GenesisState defines the escrow module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Crow crowList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
